--- a/mlb-intl/tsconfig.json
+++ b/mlb-intl/tsconfig.json
@@ -13,7 +13,11 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "tslib" : ["path/to/node_modules/tslib/tslib.d.ts"]
+    },
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022"
